{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 114,
  "lineage": "12501dbd-ee22-dc3f-1766-608d84e3277a",
  "resources": [
    {
      "module": "module.eks-jx.module.cluster",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "cert_manager",
      "provider": "module.eks-jx.module.cluster.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "cert-manager",
            "metadata": [
              {
                "annotations": {
                  "jenkins-x.io/created-by": "Jenkins X"
                },
                "generation": 0,
                "name": "cert-manager",
                "resource_version": "6042",
                "self_link": "/api/v1/namespaces/cert-manager",
                "uid": "563ceb68-6f74-4c79-9650-d6b6db4f450a"
              }
            ]
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.data.aws_eks_cluster.cluster",
            "module.eks-jx.module.cluster.data.aws_eks_cluster_auth.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_autoscaling_group.workers",
            "module.eks-jx.module.cluster.module.eks.aws_autoscaling_group.workers_launch_template",
            "module.eks-jx.module.cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-jx.module.cluster.module.eks.aws_eks_cluster.this",
            "module.eks-jx.module.cluster.module.eks.aws_iam_instance_profile.workers",
            "module.eks-jx.module.cluster.module.eks.aws_iam_instance_profile.workers_launch_template",
            "module.eks-jx.module.cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.workers",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.workers_AmazonEC2ContainerRegistryReadOnly",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.workers_AmazonEKSWorkerNodePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.workers_AmazonEKS_CNI_Policy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.workers_additional_policies",
            "module.eks-jx.module.cluster.module.eks.aws_launch_configuration.workers",
            "module.eks-jx.module.cluster.module.eks.aws_launch_template.workers_launch_template",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.workers",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.cluster_primary_ingress_workers",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.cluster_private_access",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.workers_egress_internet",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.workers_ingress_cluster",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.workers_ingress_cluster_https",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.workers_ingress_cluster_kubelet",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.workers_ingress_cluster_primary",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.workers_ingress_self",
            "module.eks-jx.module.cluster.module.eks.data.aws_ami.eks_worker",
            "module.eks-jx.module.cluster.module.eks.data.aws_ami.eks_worker_windows",
            "module.eks-jx.module.cluster.module.eks.data.aws_caller_identity.current",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_instance_profile.custom_worker_group_iam_instance_profile",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_instance_profile.custom_worker_group_launch_template_iam_instance_profile",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_policy_document.workers_assume_role_policy",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks-jx.module.cluster.module.eks.data.aws_partition.current",
            "module.eks-jx.module.cluster.module.eks.data.null_data_source.node_groups",
            "module.eks-jx.module.cluster.module.eks.data.template_file.launch_template_userdata",
            "module.eks-jx.module.cluster.module.eks.data.template_file.userdata",
            "module.eks-jx.module.cluster.module.eks.kubernetes_config_map.aws_auth",
            "module.eks-jx.module.cluster.module.eks.local_file.kubeconfig",
            "module.eks-jx.module.cluster.module.eks.module.node_groups.aws_eks_node_group.workers",
            "module.eks-jx.module.cluster.module.eks.module.node_groups.random_pet.node_groups",
            "module.eks-jx.module.cluster.module.eks.null_resource.wait_for_cluster",
            "module.eks-jx.module.cluster.module.eks.random_pet.workers",
            "module.eks-jx.module.cluster.module.eks.random_pet.workers_launch_template",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.private",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.module.cluster.null_resource.kubeconfig",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jx",
      "provider": "module.eks-jx.module.cluster.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "jx",
            "metadata": [
              {
                "annotations": {
                  "jenkins-x.io/created-by": "Jenkins X",
                  "jenkins.io/chart": "env"
                },
                "generation": 0,
                "labels": {
                  "certmanager.k8s.io/disable-validation": "true",
                  "env": "dev",
                  "jenkins.io/chart-release": "jenkins-x",
                  "jenkins.io/version": "1",
                  "team": "jx"
                },
                "name": "jx",
                "resource_version": "8234",
                "self_link": "/api/v1/namespaces/jx",
                "uid": "1ffc8090-a97b-4600-8a3c-18bf201e5279"
              }
            ]
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.data.aws_eks_cluster.cluster",
            "module.eks-jx.module.cluster.data.aws_eks_cluster_auth.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_autoscaling_group.workers",
            "module.eks-jx.module.cluster.module.eks.aws_autoscaling_group.workers_launch_template",
            "module.eks-jx.module.cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-jx.module.cluster.module.eks.aws_eks_cluster.this",
            "module.eks-jx.module.cluster.module.eks.aws_iam_instance_profile.workers",
            "module.eks-jx.module.cluster.module.eks.aws_iam_instance_profile.workers_launch_template",
            "module.eks-jx.module.cluster.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.workers",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.workers_AmazonEC2ContainerRegistryReadOnly",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.workers_AmazonEKSWorkerNodePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.workers_AmazonEKS_CNI_Policy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.workers_additional_policies",
            "module.eks-jx.module.cluster.module.eks.aws_launch_configuration.workers",
            "module.eks-jx.module.cluster.module.eks.aws_launch_template.workers_launch_template",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.workers",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.cluster_primary_ingress_workers",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.cluster_private_access",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.workers_egress_internet",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.workers_ingress_cluster",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.workers_ingress_cluster_https",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.workers_ingress_cluster_kubelet",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.workers_ingress_cluster_primary",
            "module.eks-jx.module.cluster.module.eks.aws_security_group_rule.workers_ingress_self",
            "module.eks-jx.module.cluster.module.eks.data.aws_ami.eks_worker",
            "module.eks-jx.module.cluster.module.eks.data.aws_ami.eks_worker_windows",
            "module.eks-jx.module.cluster.module.eks.data.aws_caller_identity.current",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_instance_profile.custom_worker_group_iam_instance_profile",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_instance_profile.custom_worker_group_launch_template_iam_instance_profile",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_policy_document.workers_assume_role_policy",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks-jx.module.cluster.module.eks.data.aws_partition.current",
            "module.eks-jx.module.cluster.module.eks.data.null_data_source.node_groups",
            "module.eks-jx.module.cluster.module.eks.data.template_file.launch_template_userdata",
            "module.eks-jx.module.cluster.module.eks.data.template_file.userdata",
            "module.eks-jx.module.cluster.module.eks.kubernetes_config_map.aws_auth",
            "module.eks-jx.module.cluster.module.eks.local_file.kubeconfig",
            "module.eks-jx.module.cluster.module.eks.module.node_groups.aws_eks_node_group.workers",
            "module.eks-jx.module.cluster.module.eks.module.node_groups.random_pet.node_groups",
            "module.eks-jx.module.cluster.module.eks.null_resource.wait_for_cluster",
            "module.eks-jx.module.cluster.module.eks.random_pet.workers",
            "module.eks-jx.module.cluster.module.eks.random_pet.workers_launch_template",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.private",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.module.cluster.null_resource.kubeconfig",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621520006631:security-group/sg-0b6637ddef383b5d8",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6637ddef383b5d8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00dbda938c1b272ab"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "capires2020102910092411240000000b",
            "name_prefix": "capires",
            "owner_id": "621520006631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "capires-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01acca9b887511bbe"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621520006631:security-group/sg-00dbda938c1b272ab",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dbda938c1b272ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/client=a36861886afa8411dbb1081d42bc1baa",
                "from_port": 30484,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30484
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/client=a36861886afa8411dbb1081d42bc1baa",
                "from_port": 31738,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31738
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/mtu",
                "from_port": 3,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 4
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "kubernetes.io/rule/nlb/health=a36861886afa8411dbb1081d42bc1baa",
                "from_port": 30484,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30484
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "kubernetes.io/rule/nlb/health=a36861886afa8411dbb1081d42bc1baa",
                "from_port": 31738,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31738
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b6637ddef383b5d8"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b6637ddef383b5d8"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "capires2020102910215407790000000f",
            "name_prefix": "capires",
            "owner_id": "621520006631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "capires-eks_worker_sg",
              "kubernetes.io/cluster/capires": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01acca9b887511bbe"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-jx.module.cluster.module.eks.aws_eks_cluster.this",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks-jx.module.cluster.module.eks.data.aws_partition.current",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.private",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2090615468",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b6637ddef383b5d8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2832940928",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b6637ddef383b5d8",
            "self": false,
            "source_security_group_id": "sg-00dbda938c1b272ab",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-jx.module.cluster.module.eks.aws_eks_cluster.this",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.workers",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks-jx.module.cluster.module.eks.data.aws_partition.current",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.private",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3932573887",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00dbda938c1b272ab",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-jx.module.cluster.module.eks.aws_eks_cluster.this",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.workers",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks-jx.module.cluster.module.eks.data.aws_partition.current",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.private",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2495339683",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00dbda938c1b272ab",
            "self": false,
            "source_security_group_id": "sg-0b6637ddef383b5d8",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-jx.module.cluster.module.eks.aws_eks_cluster.this",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.workers",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks-jx.module.cluster.module.eks.data.aws_partition.current",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.private",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-243413489",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00dbda938c1b272ab",
            "self": false,
            "source_security_group_id": "sg-0b6637ddef383b5d8",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-jx.module.cluster.module.eks.aws_eks_cluster.this",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.workers",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks-jx.module.cluster.module.eks.data.aws_partition.current",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.private",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2505897547",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00dbda938c1b272ab",
            "self": false,
            "source_security_group_id": "sg-00dbda938c1b272ab",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-jx.module.cluster.module.eks.aws_eks_cluster.this",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.workers",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks-jx.module.cluster.module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks-jx.module.cluster.module.eks.data.aws_partition.current",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.private",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621520006631:internet-gateway/igw-073d638b5df43c872",
            "id": "igw-073d638b5df43c872",
            "owner_id": "621520006631",
            "tags": {
              "Name": "tf-vpc-eks",
              "kubernetes.io/cluster/capires": "shared"
            },
            "vpc_id": "vpc-01acca9b887511bbe"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-073d638b5df43c872",
            "id": "r-rtb-05dc0313fc5d4aadd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05dc0313fc5d4aadd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.vpc.aws_internet_gateway.this",
            "module.eks-jx.module.cluster.module.vpc.aws_route_table.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01169d0ec91d00751",
            "owner_id": "621520006631",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-vpc-eks-private-us-east-1a",
              "kubernetes.io/cluster/capires": "shared"
            },
            "vpc_id": "vpc-01acca9b887511bbe"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c02328fd52bdfbd9",
            "owner_id": "621520006631",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-vpc-eks-private-us-east-1b",
              "kubernetes.io/cluster/capires": "shared"
            },
            "vpc_id": "vpc-01acca9b887511bbe"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f3cd1cd96447fb1e",
            "owner_id": "621520006631",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-vpc-eks-private-us-east-1c",
              "kubernetes.io/cluster/capires": "shared"
            },
            "vpc_id": "vpc-01acca9b887511bbe"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05dc0313fc5d4aadd",
            "owner_id": "621520006631",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073d638b5df43c872",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-vpc-eks-public",
              "kubernetes.io/cluster/capires": "shared"
            },
            "vpc_id": "vpc-01acca9b887511bbe"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5e04c9198a3e127",
            "route_table_id": "rtb-01169d0ec91d00751",
            "subnet_id": "subnet-01090ffdcd8324fbb"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_route_table.private",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.private",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d55782343e48c3a0",
            "route_table_id": "rtb-0c02328fd52bdfbd9",
            "subnet_id": "subnet-0e05d44064d9a95fa"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_route_table.private",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.private",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f60d7ccdb540e31",
            "route_table_id": "rtb-0f3cd1cd96447fb1e",
            "subnet_id": "subnet-06b4c8939bee28063"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_route_table.private",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.private",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d76b4e21a91fbd0b",
            "route_table_id": "rtb-05dc0313fc5d4aadd",
            "subnet_id": "subnet-082d7c60e77b1f2cb"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_route_table.public",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0996575037a9e79fd",
            "route_table_id": "rtb-05dc0313fc5d4aadd",
            "subnet_id": "subnet-013474d379ea8cabc"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_route_table.public",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01479887ab6baecb4",
            "route_table_id": "rtb-05dc0313fc5d4aadd",
            "subnet_id": "subnet-0590e87914926b8bb"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_route_table.public",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621520006631:subnet/subnet-01090ffdcd8324fbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-01090ffdcd8324fbb",
            "map_public_ip_on_launch": false,
            "owner_id": "621520006631",
            "tags": {
              "Name": "tf-vpc-eks-private-us-east-1a",
              "kubernetes.io/cluster/capires": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01acca9b887511bbe"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621520006631:subnet/subnet-0e05d44064d9a95fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0e05d44064d9a95fa",
            "map_public_ip_on_launch": false,
            "owner_id": "621520006631",
            "tags": {
              "Name": "tf-vpc-eks-private-us-east-1b",
              "kubernetes.io/cluster/capires": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01acca9b887511bbe"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621520006631:subnet/subnet-06b4c8939bee28063",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-06b4c8939bee28063",
            "map_public_ip_on_launch": false,
            "owner_id": "621520006631",
            "tags": {
              "Name": "tf-vpc-eks-private-us-east-1c",
              "kubernetes.io/cluster/capires": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01acca9b887511bbe"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621520006631:subnet/subnet-082d7c60e77b1f2cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-082d7c60e77b1f2cb",
            "map_public_ip_on_launch": true,
            "owner_id": "621520006631",
            "tags": {
              "Name": "tf-vpc-eks-public-us-east-1a",
              "kubernetes.io/cluster/capires": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01acca9b887511bbe"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621520006631:subnet/subnet-013474d379ea8cabc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-013474d379ea8cabc",
            "map_public_ip_on_launch": true,
            "owner_id": "621520006631",
            "tags": {
              "Name": "tf-vpc-eks-public-us-east-1b",
              "kubernetes.io/cluster/capires": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01acca9b887511bbe"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621520006631:subnet/subnet-0590e87914926b8bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0590e87914926b8bb",
            "map_public_ip_on_launch": true,
            "owner_id": "621520006631",
            "tags": {
              "Name": "tf-vpc-eks-public-us-east-1c",
              "kubernetes.io/cluster/capires": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01acca9b887511bbe"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.data.aws_availability_zones.available",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.eks-jx.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621520006631:vpc/vpc-01acca9b887511bbe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033948d1ee1d3f7cf",
            "default_route_table_id": "rtb-04044052f3dea080e",
            "default_security_group_id": "sg-00deb134b59f301af",
            "dhcp_options_id": "dopt-c75f31bd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01acca9b887511bbe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04044052f3dea080e",
            "owner_id": "621520006631",
            "tags": {
              "Name": "tf-vpc-eks",
              "kubernetes.io/cluster/capires": "shared"
            }
          },
          "dependencies": [
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    }
  ]
}